<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true">

	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="1"
		android:orientation="vertical"
		android:id="@+id/ll_load_tag_info"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:layout_marginRight="15dp"
		android:layout_marginLeft="15dp"
		android:layout_marginTop="15dp">

		<Button
			android:id="@+id/bt_tag_search_equ_id"
			android:textSize="15.0sp"
			android:textColor="#ffffffff"
			android:layout_margin="10.0dp"
			android:layout_width="fill_parent"
			android:layout_height="35dp"
			android:text="@string/tag_search"
			android:background="@drawable/chat_send_button_bg"/>

		<Button
			android:id="@+id/bt_tag_read_equ_id"
			android:textSize="15.0sp"
			android:textColor="#ffffffff"
			android:layout_margin="10.0dp"
			android:layout_width="fill_parent"
			android:layout_height="35dp"
			android:text="@string/tag_load_text_r"
			android:background="@drawable/chat_send_button_bg"/>

		<Button
			android:id="@+id/bt_tag_write_equ_id"
			android:textSize="15.0sp"
			android:textColor="#ffffffff"
			android:layout_margin="10.0dp"
			android:layout_width="fill_parent"
			android:layout_height="35dp"
			android:text="@string/tag_load_text_w"
			android:background="@drawable/chat_send_button_bg"/>

		<Button
			android:id="@+id/bt_tag_download_Info"
			android:textSize="15.0sp"
			android:textColor="#ffffffff"
			android:layout_margin="10.0dp"
			android:layout_width="fill_parent"
			android:layout_height="35dp"
			android:text="@string/tag_load_from_internet"
			android:background="@drawable/chat_send_button_bg"/>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="25dp"
			android:text="@string/tag_load_text1"
			android:paddingLeft="15dp"
			android:textColor="@android:color/black"
			android:textSize="17.0sp" />

		<EditText
			android:id="@+id/et_tag_load_equ_id"
			android:textSize="15.0sp"
			android:textColor="@android:color/black"
			android:layout_marginLeft="10.0dp"
			android:layout_marginRight="10.0dp"
			android:layout_marginBottom="10.0dp"
			android:paddingLeft="15dp"
			android:layout_width="fill_parent"
			android:background="@drawable/shape_bg"
			android:inputType="text"
			android:hint="@string/tag_load_text1_hint"
			android:layout_height="35dp"/>

		<Button
			android:id="@+id/bt_tag_load_equ_id"
			android:textSize="15.0sp"
			android:textColor="#ffffffff"
			android:layout_margin="10.0dip"
			android:layout_width="fill_parent"
			android:layout_height="35dp"
			android:text="@string/tag_load_button"
			android:background="@drawable/chat_send_button_bg"/>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="25dp"
			android:text="@string/tag_load_text2"
			android:paddingLeft="15dp"
			android:textColor="@android:color/black"
			android:textSize="17.0sp" />

		<EditText
			android:id="@+id/et_mission_load_man_id"
			android:textSize="15.0sp"
			android:textColor="@android:color/black"
			android:layout_marginLeft="10.0dp"
			android:layout_marginRight="10.0dp"
			android:layout_marginBottom="10.0dp"
			android:paddingLeft="15dp"
			android:layout_width="fill_parent"
			android:background="@drawable/shape_bg"
			android:inputType="text"
			android:hint="@string/tag_load_text2_hint"
			android:layout_height="35dp"/>

		<Button
			android:id="@+id/bt_mission_load_man_id"
			android:textSize="15.0sp"
			android:textColor="#ffffffff"
			android:layout_margin="10.0dp"
			android:layout_width="fill_parent"
			android:layout_height="35dp"
			android:text="@string/tag_load_button"
			android:background="@drawable/chat_send_button_bg"/>
	</TableLayout>

</ScrollView>