<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" 
 	android:id="@+id/loginRoot"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:background="@null">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dp"
        android:layout_marginRight="20.0dp"
        android:layout_marginTop="20.0dp"
        android:background="@drawable/shape_bg"
        android:paddingBottom="20.0dp"
        android:paddingTop="20.0dp" >

            <ImageView
                android:contentDescription="@string/mydefaultstring"
                android:id="@+id/faceImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_user" />

            <EditText
                android:id="@+id/login_edit_account"
                android:background="@drawable/edit_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5.0dp"
                android:layout_marginLeft="5.0dp"
                android:layout_marginRight="5.0dp"
                android:layout_marginTop="5.0dp"
                android:layout_toRightOf="@+id/faceImg"
                android:hint="@string/strInputAccHint"
                android:textSize="16sp"
                android:paddingLeft="50.0dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_edit_account"
                android:layout_alignLeft="@+id/login_edit_account"
                android:layout_alignTop="@+id/login_edit_account"
                android:layout_marginRight="15.0dp"
                android:gravity="center_vertical"
                android:paddingLeft="7.0dp"
                android:text="@string/strAccInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0sp" />


            <EditText
                android:id="@+id/login_edit_pwd"
                android:background="@drawable/edit_login"
                 android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/login_edit_account"
                android:layout_alignRight="@+id/login_edit_account"
                android:layout_below="@+id/login_edit_account"
                android:layout_marginRight="1.0dp"
                android:layout_marginTop="8dp"
                android:inputType="textPassword"
                android:paddingLeft="50.0dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_edit_pwd"
                android:layout_alignRight="@+id/TextView01"
                android:layout_alignTop="@+id/login_edit_pwd"
                android:gravity="center_vertical"
                android:paddingLeft="7.0dp"
                android:text="@string/strPswInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0sp" />

            <CheckBox
                android:id="@+id/login_cb_savepwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/login_btn_login"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="5dp"
                android:button="@drawable/login_btn_check"
                android:checked="true"
                android:paddingLeft="25.0dp"
                android:text="@string/opt_remember"
                android:textColor="#ff222222"
                android:textSize="16.0sp" />

            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/TextView02"
                android:layout_marginRight="12.0dp"
                android:layout_marginTop="7.0dp"
                android:text="@string/login" />
    </RelativeLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:text="@string/tab1_layout_connect_reader"
        android:textColor="@android:color/black"
        android:textSize="17.0sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dp"
        android:layout_marginRight="20.0dp"
        android:layout_marginTop="20.0dp">

        <Button
            android:id="@+id/button_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab1_layout_button_connect" />

        <Button
            android:id="@+id/button_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab1_layout_button_disconnect" />
    </LinearLayout>

</LinearLayout>