<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<LinearLayout
     	style="@style/ll_text_style">
     	<TextView 
         	android:textSize="15.0sp"
         	android:paddingLeft="15.0sp"
         	android:textColor="@android:color/black"
         	android:layout_width="wrap_content"
         	android:text="@string/upload_description"
         	android:layout_height="wrap_content"/>
     	
    	<TextView
       		android:id="@+id/tv_upload_description" 
       		android:textSize="15.0sp"
         	android:paddingLeft="20.0sp"
         	android:textColor="#ff545454"
         	android:layout_width="0dip"
         	android:layout_height="wrap_content"
         	android:layout_weight="1"/>
	</LinearLayout>
	<View
    	android:background="@drawable/shape_line" 
   		android:layout_width="fill_parent"
		android:layout_height="1.0px" />
	
	<LinearLayout
     	style="@style/ll_text_style">
     	<TextView 
         	android:textSize="15.0sp"
         	android:paddingLeft="15.0sp"
         	android:textColor="@android:color/black"
         	android:layout_width="wrap_content"
         	android:text="@string/upload_time"
         	android:layout_height="wrap_content"/>
     	
    	<TextView
       		android:id="@+id/tv_upload_time" 
       		android:textSize="15.0sp"
         	android:paddingLeft="20.0sp"
         	android:textColor="#ff545454"
         	android:layout_width="0dip"
         	android:layout_height="wrap_content"
         	android:layout_weight="1"/>
	</LinearLayout>
	<View
    	android:background="@drawable/shape_line" 
   		android:layout_width="fill_parent"
		android:layout_height="1.0px" />

	<LinearLayout
     	style="@style/ll_text_style">
     	<TextView 
         	android:textSize="15.0sp"
         	android:paddingLeft="15.0sp"
         	android:textColor="@android:color/black"
         	android:layout_width="wrap_content"
         	android:text="@string/upload_tag"
         	android:layout_height="wrap_content"/>
     	
    	<TextView
       		android:id="@+id/tv_upload_tag" 
       		android:textSize="15.0sp"
         	android:paddingLeft="20.0sp"
         	android:textColor="#ff545454"
         	android:layout_width="0dip"
         	android:layout_height="wrap_content"
         	android:layout_weight="1"/>
	</LinearLayout>
	<View
    	android:background="@drawable/shape_line" 
   		android:layout_width="fill_parent"
		android:layout_height="1.0px" />
	
	<LinearLayout
     	style="@style/ll_text_style">
     	<TextView 
         	android:textSize="15.0sp"
         	android:paddingLeft="15.0sp"
         	android:textColor="@android:color/black"
         	android:layout_width="wrap_content"
         	android:text="@string/upload_mission"
         	android:layout_height="wrap_content"/>
     	
    	<TextView
       		android:id="@+id/tv_upload_mission" 
       		android:textSize="15.0sp"
         	android:paddingLeft="20.0sp"
         	android:textColor="#ff545454"
         	android:layout_width="0dip"
         	android:layout_height="wrap_content"
         	android:layout_weight="1"/>
	</LinearLayout>

	<Button
	  	   android:id="@+id/bt_loadup"  
           android:textSize="15.0sp"  
           android:textColor="#ffffffff" 
           android:layout_marginLeft="15dip"
           android:layout_marginRight="15dip"
           android:layout_width="fill_parent" 
           android:layout_height="35dp" 
           android:text="@string/loadup_button"
           android:background="@drawable/chat_send_button_bg"/>

	<View
		android:background="@drawable/shape_line"
		android:layout_width="fill_parent"
		android:layout_height="1.0px" />

	<Button
		android:id="@+id/bt_delete"
		android:textSize="15.0sp"
		android:textColor="#ffffffff"
		android:layout_marginLeft="15dip"
		android:layout_marginRight="15dip"
		android:layout_width="fill_parent"
		android:layout_height="35dp"
		android:text="删除"
		android:background="@drawable/chat_send_button_bg"/>

</LinearLayout>
